--- a/SistemaVentas/pom.xml
+++ b/SistemaVentas/pom.xml
@@ -20,6 +20,14 @@
             <artifactId>JTattoo</artifactId>
             <version>1.6.7</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.java.net.substance/substance -->
+        <dependency>
+            <groupId>org.java.net.substance</groupId>
+            <artifactId>substance</artifactId>
+            <version>6.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
