--- a/SistemaVentas/pom.xml
+++ b/SistemaVentas/pom.xml
@@ -28,6 +28,25 @@
             <version>1.6.7</version>
         </dependency>
         
+        
+        <dependency>
+            <groupId>org.jetbrains.compose.animation</groupId>
+            <artifactId>animation</artifactId>
+            <version>2.1</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.tinygroup</groupId>
+            <artifactId>placeholder</artifactId>
+            <version>0.0.12</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RESEALSE170</version>
+        </dependency>
+        
         <!-- https://mvnrepository.com/artifact/org.java.net.substance/substance -->
         <dependency>
             <groupId>org.java.net.substance</groupId>
