Se actualizaron ventanas de cashier en modo configuracion

--- a/SistemaVentas/pom.xml
+++ b/SistemaVentas/pom.xml
@@ -21,8 +21,12 @@
         
     </properties>
     <dependencies>
-        
-       
+        <dependency>
+            <groupId>unknown.binary</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
 </project>
