--- a/SistemaVentas/pom.xml
+++ b/SistemaVentas/pom.xml
@@ -27,6 +27,11 @@
             <version>SNAPSHOT</version>
             <type>jar</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.31</version>
+        </dependency>
     </dependencies>
-
 </project>
