optimizando código y un nuevo login

--- a/SistemaVentas/pom.xml
+++ b/SistemaVentas/pom.xml
@@ -28,6 +28,7 @@
             <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
             <version>1.5.4</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
