--- a/SistemaVentas/pom.xml
+++ b/SistemaVentas/pom.xml
@@ -30,5 +30,13 @@
             <version>1.5.4</version>
             <type>jar</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.formdev/flatlaf -->
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.1.1</version>
+            <type>jar</type>
+        </dependency>
+
     </dependencies>
 </project>
