--- a/SistemaVentas/pom.xml
+++ b/SistemaVentas/pom.xml
@@ -37,6 +37,11 @@
             <version>3.1.1</version>
             <type>jar</type>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.3</version>
+        </dependency>
     </dependencies>
 </project>
